--- a/Levantamento de Perdas/Src/Ret%edfica_Engr_1%aa_Teste.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Engr_1%aa_Teste.fx.yaml
@@ -86,8 +86,8 @@ Retífica_Engr_1ª_Teste As screen:
         OnSelect: |
             =Set( varmaquina , "3316037016");
             Set( varsetor ,  Label_setor_27.Text );
-            Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
-            Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
+            Set( varute , "2912" );
+            Set( varoperacao , "130");
             Set( varselect , 1) ;
             Set(varDelay,false);
             Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result) ; Set(varDelta , 0) ;
