--- a/Levantamento de Perdas/Src/Ret%edfica_Engr_1%aa_Teste.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Engr_1%aa_Teste.fx.yaml
@@ -207,3 +207,12 @@ Retífica_Engr_1ª_Teste As screen:
         Y: =770
         ZIndex: =10
 
+    Label6 As label:
+        Height: =70
+        Size: =21
+        Text: ="TESTE"
+        Width: =200
+        X: =376
+        Y: =31
+        ZIndex: =11
+
