--- a/Levantamento de Perdas/Src/App.fx.yaml
+++ b/Levantamento de Perdas/Src/App.fx.yaml
@@ -83,6 +83,7 @@ App As appinfo:
         );
         
         Set(ctxLoading , false);
+    Theme: =PowerAppsTheme
 
     Host As hostControl.DefaultHostControlVariant:
         OnCancel: =false
