--- a/Levantamento de Perdas/Src/EditorState/Tela_Inicial_app.editorstate.json
+++ b/Levantamento de Perdas/Src/EditorState/Tela_Inicial_app.editorstate.json
@@ -106,6 +106,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "btn_2911",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 27,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -399,6 +400,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "btn_2912",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 28,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -692,6 +694,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "btn_2913",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 29,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -985,6 +988,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "btn_2914",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 30,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -1278,6 +1282,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "btn_2915",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 31,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -1551,6 +1556,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Btn_lancar_perda",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 20,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -1822,6 +1828,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Btn_lancar_prod",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 19,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -2127,6 +2134,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Btn_vis_lev_perdas",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 23,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -2445,6 +2453,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "ComboBoxmaquina_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 5,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -2825,6 +2834,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "ComboBoxute_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 3,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -3153,6 +3163,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "DatePicker_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 4,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -3447,6 +3458,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Filtro_desbalanceamento",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 24,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -3716,6 +3728,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Filtro_naoprevistoprod",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 25,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -3985,6 +3998,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Filtro_refeicao_intervalo",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 26,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -4293,6 +4307,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon2_1",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 2,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -4516,6 +4531,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "IconRefresh1_2",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 1,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -4777,6 +4793,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Label_oee_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 21,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -5088,6 +5105,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Label_perda_real_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 10,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -5399,6 +5417,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Label_perda_real_ini_1",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 12,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -5710,6 +5729,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Label_perdaimpact_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 17,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -6021,6 +6041,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Label_perdanaoimpact_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 15,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -6332,6 +6353,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Label_prod_real_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 8,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -6657,6 +6679,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Label_resumo_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 7,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -6975,6 +6998,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Label_resumo_ini_1",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 14,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -7265,6 +7289,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Label4",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 32,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -7568,6 +7593,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "OEE_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 22,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -7866,6 +7892,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Perda_Real_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 11,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -8164,6 +8191,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Perdaimpact_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 18,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -8462,6 +8490,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Perdanaoimpact_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 16,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -8760,6 +8789,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Prod_Real_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 9,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -9000,6 +9030,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Tela_Inicial_app",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 0,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -9154,6 +9185,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Titulo_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 0,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -9457,6 +9489,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Total",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 13,
       "PersistMetaDataIDKey": false,
       "Properties": [
@@ -9722,6 +9755,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "txt_date_ini",
+      "OptimizeForDevices": "Off",
       "ParentIndex": 6,
       "PersistMetaDataIDKey": false,
       "Properties": [
