--- a/Levantamento de Perdas/Src/Tela_Detail_Perdas.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Detail_Perdas.fx.yaml
@@ -61,6 +61,7 @@
         PaddingTop: =24
         TabIndex: =0
         Tooltip: ="Excluir esse item"
+        Visible: =false
         Width: =88
         X: =Parent.Width - IconEdit1_1.Width - Self.Width
         ZIndex: =4
