--- a/Levantamento de Perdas/Src/Tela_Detail_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Detail_Producao.fx.yaml
@@ -56,6 +56,7 @@
         PaddingTop: =24
         TabIndex: =0
         Tooltip: ="Excluir esse item"
+        Visible: =false
         Width: =88
         X: =477
         ZIndex: =4
