--- a/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
@@ -8367,7 +8367,7 @@
 
     Icon_edit_prod As icon.Edit:
         Height: =20
-        Icon: =Icon.Edit
+        Icon: =Icon.Trash
         Width: =24
         X: =375
         ZIndex: =597
@@ -8392,7 +8392,7 @@
 
     Icon_edit_perdas As icon.Edit:
         Height: =20
-        Icon: =Icon.Edit
+        Icon: =Icon.Trash
         Width: =24
         X: =377
         Y: =29
