--- a/Levantamento de Perdas/Src/Tela_Detail_Perdas.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Detail_Perdas.fx.yaml
@@ -771,3 +771,14 @@
             Y: =40
             ZIndex: =2
 
+    TextInput1 As text:
+        Align: =Align.Center
+        Default: ="EM MANUTENÇÃO"
+        Fill: =RGBA(255, 255, 0, 1)
+        Height: =70
+        Size: =18
+        Width: =246
+        X: =385
+        Y: =9
+        ZIndex: =8
+
