--- a/Levantamento de Perdas/Src/Tela_Detail_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Detail_Producao.fx.yaml
@@ -67,7 +67,7 @@
         Text: ="Detalhes Produção"
         Width: =Parent.Width - Self.X - IconDelete1.Width - IconEdit1.Width
         Wrap: =false
-        X: =80
+        X: =85
         ZIndex: =5
 
     DetailForm1 As formViewer:
@@ -527,4 +527,15 @@
             Width: =630
             Y: =40
             ZIndex: =2
+
+    TextInput1_1 As text:
+        Align: =Align.Center
+        Default: ="EM MANUTENÇÃO"
+        Fill: =RGBA(255, 255, 0, 1)
+        Height: =70
+        Size: =15
+        Width: =188
+        X: =427
+        Y: =9
+        ZIndex: =8
 
