--- a/Levantamento de Perdas/Src/Tela_Inicial_Perdas.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_Perdas.fx.yaml
@@ -76,9 +76,9 @@
                 varDataCountperdas < varDelegationLimit,
                 SortByColumns(
                 Filter(Filter(
-                        LancamentoPerdas,
-                        ((UTE = ComboBoxuteperdas.Selected.Result) || ComboBoxuteperdas.Selected.Result = Blank()) && ((MAQUINA = ComboBoxmaquinaperdas.Selected.Result) || ComboBoxmaquinaperdas.Selected.Result = Blank()) && ((DATA = txt_date_perdas.Text) || txt_date_perdas.Text = Blank())
-                    ) , txt_date_perdas.Text in DATA),
+                        LancamentoPerdas_BD,
+                        ((UTE = ComboBoxuteperdas.Selected.Result) || ComboBoxuteperdas.Selected.Result = Blank()) && ((MAQUINA = ComboBoxmaquinaperdas.Selected.Result) || ComboBoxmaquinaperdas.Selected.Result = Blank()) && ((Data = txt_date_perdas.Text) || txt_date_perdas.Text = Blank())
+                    ) , txt_date_perdas.Text in Data),
                     "HORA_INICIO",
                     If(
                         SortDescending1,
@@ -88,18 +88,17 @@
                     )
                 ),
                 Filter(
-                    LancamentoPerdas,
-                    ((UTE = ComboBoxuteperdas.Selected.Result) || ComboBoxuteperdas.Selected.Result = Blank()) && ((MAQUINA = ComboBoxmaquinaperdas.Selected.Result) || ComboBoxmaquinaperdas.Selected.Result = Blank()) && ((DATA = txt_date_perdas.Text) || txt_date_perdas.Text = Blank())
+                    LancamentoPerdas_BD,
+                    ((UTE = ComboBoxuteperdas.Selected.Result) || ComboBoxuteperdas.Selected.Result = Blank()) && ((MAQUINA = ComboBoxmaquinaperdas.Selected.Result) || ComboBoxmaquinaperdas.Selected.Result = Blank()) && ((Data = txt_date_perdas.Text) || txt_date_perdas.Text = Blank())
                 )
             )
         Layout: =Layout.Vertical
         NavigationStep: =2
         OnSelect: =Navigate(Tela_Detail_Perdas, ScreenTransition.None)
-        ShowScrollbar: =false
         TemplatePadding: =1
         TemplateSize: =Min(168, Self.Height - 60)
         Transition: =Transition.Pop
-        Width: =Parent.Width
+        Width: =637
         Y: =263
         ZIndex: =9
 
@@ -152,7 +151,7 @@
             PaddingRight: =0
             PaddingTop: =0
             Text: |-
-                ="Data: " & ThisItem.DATA
+                ="Data: " & ThisItem.Data
             VerticalAlign: =VerticalAlign.Top
             Width: =216
             X: =32
@@ -211,7 +210,7 @@
                 ="Quantidade: " & ThisItem.QUANTIDADE
             VerticalAlign: =VerticalAlign.Top
             Width: =326
-            X: =312
+            X: =303
             Y: =130
             ZIndex: =8
 
@@ -226,8 +225,8 @@
             Text: |-
                 ="Tipo de Perda: " & ThisItem.TIPO_DE_PERDA
             VerticalAlign: =VerticalAlign.Top
-            Width: =308
-            X: =325
+            Width: =284
+            X: =301
             Y: =54
             ZIndex: =9
 
