--- a/Levantamento de Perdas/Src/Tela_Detail_Perdas.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Detail_Perdas.fx.yaml
@@ -53,7 +53,7 @@
         Icon: =Icon.Trash
         OnSelect: |
             =RemoveIf(LancamentoPerdas, ID = Value(DataCardValue50.Text));
-            Remove([@LancamentoPerdas_BD], BrowseGallery1perdas.Selected);
+            Remove([@LancamentoPerdas], BrowseGallery1perdas.Selected);
             If (IsEmpty(Errors([@LancamentoPerdas], BrowseGallery1perdas.Selected)), Back())
         PaddingBottom: =24
         PaddingLeft: =24
