--- a/Levantamento de Perdas/Src/Tela_Inicial_Perdas.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_Perdas.fx.yaml
@@ -76,9 +76,9 @@
                 varDataCountperdas < varDelegationLimit,
                 SortByColumns(
                 Filter(Filter(
-                        LancamentoPerdas_BD,
-                        ((UTE = ComboBoxuteperdas.Selected.Result) || ComboBoxuteperdas.Selected.Result = Blank()) && ((MAQUINA = ComboBoxmaquinaperdas.Selected.Result) || ComboBoxmaquinaperdas.Selected.Result = Blank()) && ((Data = txt_date_perdas.Text) || txt_date_perdas.Text = Blank())
-                    ) , txt_date_perdas.Text in Data),
+                        LancamentoPerdas,
+                        ((UTE = ComboBoxuteperdas.Selected.Result) || ComboBoxuteperdas.Selected.Result = Blank()) && ((MAQUINA = ComboBoxmaquinaperdas.Selected.Result) || ComboBoxmaquinaperdas.Selected.Result = Blank()) && ((DATA = txt_date_perdas.Text) || txt_date_perdas.Text = Blank())
+                    ) , txt_date_perdas.Text in DATA),
                     "HORA_INICIO",
                     If(
                         SortDescending1,
@@ -88,8 +88,8 @@
                     )
                 ),
                 Filter(
-                    LancamentoPerdas_BD,
-                    ((UTE = ComboBoxuteperdas.Selected.Result) || ComboBoxuteperdas.Selected.Result = Blank()) && ((MAQUINA = ComboBoxmaquinaperdas.Selected.Result) || ComboBoxmaquinaperdas.Selected.Result = Blank()) && ((Data = txt_date_perdas.Text) || txt_date_perdas.Text = Blank())
+                    LancamentoPerdas,
+                    ((UTE = ComboBoxuteperdas.Selected.Result) || ComboBoxuteperdas.Selected.Result = Blank()) && ((MAQUINA = ComboBoxmaquinaperdas.Selected.Result) || ComboBoxmaquinaperdas.Selected.Result = Blank()) && ((DATA = txt_date_perdas.Text) || txt_date_perdas.Text = Blank())
                 )
             )
         Layout: =Layout.Vertical
@@ -151,7 +151,7 @@
             PaddingRight: =0
             PaddingTop: =0
             Text: |-
-                ="Data: " & ThisItem.Data
+                ="Data: " & ThisItem.DATA
             VerticalAlign: =VerticalAlign.Top
             Width: =216
             X: =32
