--- a/Levantamento de Perdas/Src/Tela_Inicial_Perdas.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_Perdas.fx.yaml
@@ -76,9 +76,9 @@
                 varDataCountperdas < varDelegationLimit,
                 SortByColumns(
                 Filter(Filter(
-                        LancamentoPerdas,
-                        ((UTE = ComboBoxuteperdas.Selected.Result) || ComboBoxuteperdas.Selected.Result = Blank()) && ((MAQUINA = ComboBoxmaquinaperdas.Selected.Result) || ComboBoxmaquinaperdas.Selected.Result = Blank()) && ((DATA = txt_date_perdas.Text) || txt_date_perdas.Text = Blank())
-                    ) , txt_date_perdas.Text in DATA),
+                        LancamentoPerdas_BD,
+                        ((UTE = ComboBoxuteperdas.Selected.Result) || ComboBoxuteperdas.Selected.Result = Blank()) && ((MAQUINA = ComboBoxmaquinaperdas.Selected.Result) || ComboBoxmaquinaperdas.Selected.Result = Blank()) && ((Data = txt_date_perdas.Text) || txt_date_perdas.Text = Blank())
+                    ) , txt_date_perdas.Text in Data),
                     "HORA_INICIO",
                     If(
                         SortDescending1,
@@ -88,13 +88,14 @@
                     )
                 ),
                 Filter(
-                    LancamentoPerdas,
-                    ((UTE = ComboBoxuteperdas.Selected.Result) || ComboBoxuteperdas.Selected.Result = Blank()) && ((MAQUINA = ComboBoxmaquinaperdas.Selected.Result) || ComboBoxmaquinaperdas.Selected.Result = Blank()) && ((DATA = txt_date_perdas.Text) || txt_date_perdas.Text = Blank())
+                    LancamentoPerdas_BD,
+                    ((UTE = ComboBoxuteperdas.Selected.Result) || ComboBoxuteperdas.Selected.Result = Blank()) && ((MAQUINA = ComboBoxmaquinaperdas.Selected.Result) || ComboBoxmaquinaperdas.Selected.Result = Blank()) && ((Data = txt_date_perdas.Text) || txt_date_perdas.Text = Blank())
                 )
             )
         Layout: =Layout.Vertical
         NavigationStep: =2
         OnSelect: =Navigate(Tela_Detail_Perdas, ScreenTransition.None)
+        ShowScrollbar: =false
         TemplatePadding: =1
         TemplateSize: =Min(168, Self.Height - 60)
         Transition: =Transition.Pop
@@ -151,7 +152,7 @@
             PaddingRight: =0
             PaddingTop: =0
             Text: |-
-                ="Data: " & ThisItem.DATA
+                ="Data: " & ThisItem.Data
             VerticalAlign: =VerticalAlign.Top
             Width: =216
             X: =32
@@ -324,7 +325,7 @@
 
     DatePickerPerdas As datepicker:
         Height: =ComboBoxmaquina.Height
-        Size: =24
+        Size: =22
         Width: =220
         X: =ComboBoxmaquinaperdas.X + ComboBoxmaquinaperdas.Width + 3
         Y: =ComboBoxmaquinaperdas.Y
