--- a/Levantamento de Perdas/Src/Tela_Ini_2911.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2911.fx.yaml
@@ -110,7 +110,7 @@ Tela_Ini_2911 As screen:
         PaddingRight: =8
         PaddingTop: =0
         Size: =20
-        Text: ="Editar Produção"
+        Text: ="Excluir Produção"
         Tooltip: ="Ir para a tela de editar produção"
         Width: =280
         X: =24
@@ -119,7 +119,7 @@ Tela_Ini_2911 As screen:
 
     Icon_edit_prod_1 As icon.Edit:
         Height: =30
-        Icon: =Icon.Edit
+        Icon: =Icon.Trash
         Width: =53
         X: =22
         Y: =101
@@ -136,7 +136,7 @@ Tela_Ini_2911 As screen:
         PaddingRight: =25
         PaddingTop: =0
         Size: =20
-        Text: ="Editar Perdas"
+        Text: ="Excluir Perdas"
         Tooltip: ="Ir para a tela de editar perdas"
         Width: =280
         X: =329
@@ -145,7 +145,7 @@ Tela_Ini_2911 As screen:
 
     Icon_edit_perdas_1 As icon.Edit:
         Height: =30
-        Icon: =Icon.Edit
+        Icon: =Icon.Trash
         Width: =38
         X: =336
         Y: =101
