--- a/Levantamento de Perdas/Src/Tela_Ini_2912.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2912.fx.yaml
@@ -206,7 +206,7 @@ Tela_Ini_2912 As screen:
         PaddingRight: =8
         PaddingTop: =0
         Size: =20
-        Text: ="Editar Produção"
+        Text: ="Excluir Produção"
         Tooltip: ="Ir para a tela de editar produção"
         Width: =280
         X: =24
@@ -215,7 +215,7 @@ Tela_Ini_2912 As screen:
 
     Icon_edit_prod_2 As icon.Edit:
         Height: =30
-        Icon: =Icon.Edit
+        Icon: =Icon.Trash
         Width: =38
         X: =29
         Y: =95
@@ -232,7 +232,7 @@ Tela_Ini_2912 As screen:
         PaddingRight: =25
         PaddingTop: =0
         Size: =20
-        Text: ="Editar Perdas"
+        Text: ="Excluir Perdas"
         Tooltip: ="Ir para a tela de editar perdas"
         Width: =280
         X: =329
@@ -240,8 +240,9 @@ Tela_Ini_2912 As screen:
         ZIndex: =22
 
     Icon_edit_perdas_2 As icon.Edit:
+        Color: =RGBA(9, 33, 98, 1)
         Height: =30
-        Icon: =Icon.Edit
+        Icon: =Icon.Trash
         Width: =38
         X: =330
         Y: =95
