--- a/Levantamento de Perdas/Src/Ret%edfica_Engr_CDT_5%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Engr_CDT_5%aa.fx.yaml
@@ -58,7 +58,7 @@ Retífica_Engr_CDT_5ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "5961502097");
+            =Set( varmaquina , "961502097-5");
             Set( varsetor ,  Label_setor_30.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
