--- a/Levantamento de Perdas/Src/Usinagem_Engr_CDZ_5%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Engr_CDZ_5%aa.fx.yaml
@@ -58,7 +58,7 @@ Usinagem_Engr_CDZ_5ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "961502074");
+            =Set( varmaquina , "961502074-5");
             Set( varsetor ,  Label_setor_12.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
